Page Layout added and log in layout added

--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_LoginPartial.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,13 @@
-﻿@using Microsoft.AspNet.Identity
+﻿<ul class="nav navbar-nav navbar-right user-menu">
+    <li>
+        <a href="@Url.Action("Login", "Account")">Log in</a>
+    </li>
+    <li>
+        <a href="@Url.Action("Login", "Account")">Register</a>
+    </li>
+</ul>
+@* ========Code below will be needed when server side function is working *@
+@*@using Microsoft.AspNet.Identity
 @using Ums.Live.Identity
 @if (Request.IsAuthenticated)
 {
@@ -47,4 +56,4 @@ else
             <a href="@Url.Action("Login", "Account")">Log in <span class="login"></span></a>
         </li>
     </ul>
-}
+}*@
