--- a/AltaPerspectiva/src/AltaPerspectiva/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva/Styles/site.less
@@ -1,4 +1,5 @@
 ﻿@import (reference) "../bower_components/bootstrap/less/bootstrap.less";
+@import "site/alta_variable";
 @import "site/navs.less";
 @import "site/buttons.less";
 @import "site/typography.less";
