--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
@@ -5,6 +5,23 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - AltaPerspectiva</title>
+    
+    <!-- 1. Load libraries -->
+    <!-- Polyfill(s) for older browsers -->
+
+    <script src="~/libs/core-js/client/shim.min.js"></script>
+    <script src="~/libs/zone.js/dist/zone.js"></script>
+    <script src="~/libs/reflect-metadata/Reflect.js"></script>
+    <script src="~/libs/systemjs/dist/system.src.js"></script>
+
+    <!-- 2. Configure SystemJS -->
+    <script src="~/Scripts/systemjs.config.js"></script>
+    <script>
+        System.import('../Scripts/main').catch(function (err)
+        {
+            console.error(err);
+        });
+    </script>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -24,7 +41,7 @@
     <div class="container-fluid">
         @RenderBody()
     </div>
-
+    
         <environment names="Development">
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
