--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_SiteHeader.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_SiteHeader.cshtml
@@ -1,4 +1,5 @@
-﻿<ap-nav></ap-nav>
+﻿<app></app>
+<ap-nav></ap-nav>
 <div class="navbar navbar-inverse navbar-fixed-top nav-background">
         <div class="container">
             <div class="navbar-header">
