Css Styles and background changed

--- a/AltaPerspectiva/src/AltaPerspectiva/Styles/site/navbar.less
+++ b/AltaPerspectiva/src/AltaPerspectiva/Styles/site/navbar.less
@@ -16,7 +16,7 @@
 }
 
 .nav-background {
-    background: url('../../images/background-hd-3.jpg');
+    background: url('../../images/background.png');
     width: 100%;
     height: 35%;
 }
