Gulp files fixed

--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_SiteHeader.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_SiteHeader.cshtml
@@ -1,5 +1,42 @@
 ﻿<app></app>
 <ap-nav></ap-nav>
+<div class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img class="half-size" src="~/images/background-hd-3.jpg" alt="Chania">
+            <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/images/background-hd-3.jpg" alt="Chania">
+            <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/images/background-hd-3.jpg" alt="Flower">
+            <div class="carousel-caption">
+                <h3>Flowers</h3>
+                <p>Beatiful flowers in Kolymbari, Crete.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="~/images/background-hd-3.jpg" alt="Flower">
+            <div class="carousel-caption">
+                <h3>Flowers</h3>
+                <p>Beatiful flowers in Kolymbari, Crete.</p>
+            </div>
+        </div>
+    </div>
+
+</div>
+@* ====================== *@
 <div class="navbar navbar-inverse navbar-fixed-top nav-background">
         <div class="container">
             <div class="navbar-header">
@@ -15,7 +52,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="nav-seperator"><a asp-area="" asp-controller="Home" asp-action="Index">Alta Perspectiva</a></li>
+                    <li class="border-right"><a asp-area="" asp-controller="Home" asp-action="Index">Alta Perspectiva</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Contact</a></li>
