Core module added and used in app module.

--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
+    <app>Loading ...</app>
     @Html.Partial("_SiteHeader")
     <div class="container-fluid">
         @RenderBody()
