--- a/AltaPerspectiva/src/AltaPerspectiva/Styles/site.less
+++ b/AltaPerspectiva/src/AltaPerspectiva/Styles/site.less
@@ -14,4 +14,8 @@
 @import "site/search.less";
 @import "site/contextmenu.less";
 
-
+/*General shared*/
+.right-border{
+    border-right:1px solid;
+    color:white;
+}
