Search panel developing..

--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
-    <app>Loading ...</app>
+    @*<app>Loading ...</app>*@
     @Html.Partial("_SiteHeader")
     <div class="container-fluid">
         @RenderBody()
