--- a/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
-    @*<app>Loading ...</app>*@
-    @Html.Partial("_SiteHeader")
+    <app>Loading ...</app>
+    @*@Html.Partial("_SiteHeader")*@
     <div class="container-fluid">
         @RenderBody()
     </div>
