--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -38,8 +38,7 @@
     @Html.ApplicationInsightsJavaScript(TelemetryConfiguration)
 </head>
 <body>
-    @*<app>Loading ...</app>*@
-    @Html.Partial("_SiteHeader")
+    <app>Loading ...</app>
     <div class="container-fluid">
         @RenderBody()
     </div>
