--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/app.component.html
@@ -1,5 +1,7 @@
 ﻿<div>
-        
+    <ap-banner></ap-banner>
+    <ap-nav></ap-nav>
+    <ap-search></ap-search>
     <router-outlet></router-outlet>
 </div>
 
