service added. inprogress.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -1,4 +1,4 @@
 ﻿<ap-banner></ap-banner>
 <ap-nav></ap-nav>
 <ap-search></ap-search>
-<div>Question summary</div>
+<div>Question summary {{categories}}</div>
