--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -1,16 +1,11 @@
 ﻿<ap-banner></ap-banner>
 <ap-nav></ap-nav>
 <ap-search></ap-search>
-<ul>
-    <li *ngFor="let category of categories">
-        <div>
-            {{category.id}}
-        </div>
-        <div>
-            {{category.name}}
-        </div>
-        <div>
-            {{category.icon}}
-        </div>
-    </li>
-</ul>
+
+<ap-tabs></ap-tabs>
+<!--<ul class="nav nav-pills">
+    <li class="active"><a href="#">Home</a></li>
+    <li><a href="#">Menu 1</a></li>
+    <li><a href="#">Menu 2</a></li>
+    <li><a href="#">Menu 3</a></li>
+</ul>-->
