--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 ﻿<ul class="nav nav-pills">
-    <li *ngFor="let category of catagories" [ngClass]="[category.active]"  >
+    <li *ngFor="let category of categories" [ngClass]="[category.active]"  >
         <a href="#" (click)="selectTab(category.id)">{{category.name}} {{category.icon}}</a>
     </li>
 </ul>
