Carousel temporary works adeed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -33,12 +33,15 @@
     .tab-header-col-md-10 {
         width: 96%;
         float: left;
+        overflow:hidden;        /* used for carousel*/
     }
     .tabs-container {
         width: 4000px;
+        transform: translateX(-54px);   /*used for dynamic carousel*/
     }
 
     .tabs > .tab {
+        display:block;
         float: left;
         line-height: 45px;
         background-color: #ededed;
