stop carousel and margin position, added.

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -1,4 +1,4 @@
-﻿<style>
+<style>
     .tab-panel-container {
         padding-right: 15px;
         padding-left: 15px;
@@ -80,18 +80,3 @@
     .tabs > .active>a, .tabs>.active>a:hover, .tabs>.active>a:focus {
         color:white;
     }
-</style>
-<div class="tab-panel-container" style="border: 1px solid">
-    <div class="tab-header-col-md-1" style="border:1px solid red"> <a  class="arrow-sign" (click)="leftclick()"><</a></div>
-    <div class="tab-header-col-md-10" style="border:1px solid red">
-        <div class="tabs-container" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
-            <div class="tabs">
-                <div class="tab" *ngFor="let category of categories" [ngClass]="[category.active]">
-                    <a routerLink="category/{{category.id}}" (click)="selectTab(category.id)">{{category.name}} {{category.icon}}</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="tab-header-col-md-1" style="border:1px solid red"><a  class="arrow-sign" (click)="rightclick()">></a></div>
-</div>
-<router-outlet></router-outlet>
