--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/search/apSearch.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="row bottom-float">
     <div class="col-md-12">
         <div class="input-group" id="adv-search">
-            <input type="text" class="form-control fixed-height" placeholder="Search for snippets" />
+            <input type="text" class="form-control searc-box fixed-height" placeholder="Search for snippets" />
             <div class="input-group-btn">
                 <div class="btn-group" role="group">
                     <div class="dropdown dropdown-lg">
