--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.css
@@ -1,82 +1,93 @@
-<style>
+.tab-panel-container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 25px;
+}
+span {
+    display:block;
+}
+@media (min-width: 768px) {
     .tab-panel-container {
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-        margin-top: 25px;
+        width: 750px;
     }
+}
 
-    @media (min-width: 768px) {
-        .tab-panel-container {
-            width: 750px;
-        }
+@media (min-width: 992px) {
+    .tab-panel-container {
+        width: 970px;
     }
+}
 
-    @media (min-width: 992px) {
-        .tab-panel-container {
-            width: 970px;
-        }
+@media (min-width: 1200px) {
+    .tab-panel-container {
+        width: 1097px;
     }
+}
 
-    @media (min-width: 1200px) {
-        .tab-panel-container {
-            width: 1097px;
-        }
-    }
+.tab-header-col-md-1 {
+    width: 2%;
+    float: left;
+}
 
-    .tab-header-col-md-1 {
-        width: 2%;
-        float: left;
-    }
+.tab-header-col-md-10 {
+    width: 96%;
+    float: left;
+    overflow: hidden; /* used for carousel*/
+}
 
-    .tab-header-col-md-10 {
-        width: 96%;
-        float: left;
-        overflow:hidden;        /* used for carousel*/
-    }
-    .tab-carousel {
-        transition: all 1.5s ease;
-    }
-    .tabs-container {
-        width: 4000px;
-    }
+.tab-carousel {
+    transition: all 1.5s ease;
+}
 
-    .tabs > .tab {
-        display:block;
-        float: left;
-        line-height: 45px;
-        background-color: #ededed;
-        margin: 0 10px;
-        min-width: 150px;
-        text-align:center;
-    }
+.tabs-container {
+    width: 4000px;
+}
 
-    ul {
-        list-style-type: none;
-    }
-    .arrow-sign {
-        font-size: 23px;
-        font-weight: 600;
-        background-color: white;
-        padding: 0;
-    }
-     a {
-        color: #706f6f;
-        text-decoration: none;
-        cursor: pointer;
-        line-height: 65px;
+.tabs > .tab {
+    padding: 12px;
+    font-size:1.5em;
+    display: block;
+    float: left;
+    line-height: 45px;
+    background-color: #f5f5f5;
+    margin: 0 10px;
+    min-width: 150px;
+    text-align: center;
+}
+.tab-text {
+    font-family:myriadpro-regular;
+}
+ul {
+    list-style-type: none;
+}
 
-    }
-    .tab-inside {
-        border-radius: 0;
-        background-color: #ededed;
-        margin: 0 10px;
-        min-width: 150px;
-    }
-    .tabs > .active, .tabs > .active:hover, .tabs > .active:focus {
-        background-color: #fdbc1e;
-    }
-    .tabs > .active>a, .tabs>.active>a:hover, .tabs>.active>a:focus {
-        color:white;
+.arrow-sign {
+    font-size: 23px;
+    font-weight: 600;
+    background-color: white;
+    padding: 0;
+}
+
+a {
+    color: #706f6f;
+    text-decoration: none;
+    cursor: pointer;
+    line-height: 65px;
+}
+
+.tab-inside {
+    border-radius: 0;
+    background-color: #ededed;
+    margin: 0 10px;
+    min-width: 150px;
+}
+
+.tabs > .active, .tabs > .active:hover, .tabs > .active:focus {
+    background-color: #fdbc1e;
+}
+
+    .tabs > .active > a, .tabs > .active > a:hover, .tabs > .active > a:focus {
+        color: white;
     }
