--- a/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/css/site.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/wwwroot/css/site.css
@@ -48,84 +48,6 @@
   vertical-align: middle;
   font-weight: 700;
 }
-.btn {
-  font-family: "Open Sans Condensed", sans-serif;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 32px;
-  height: 32px;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-  padding-top: 0;
-  padding-bottom: 0;
-}
-.btn-success {
-  box-shadow: inset 0 1px rgba(255, 255, 255, 0.19);
-  color: white;
-  background-color: #20b61f;
-  border-color: #1ba31b;
-}
-.btn-success:focus,
-.btn-success.focus {
-  color: white;
-  background-color: #188a18;
-  border-color: #093609;
-}
-.btn-success:hover {
-  color: white;
-  background-color: #188a18;
-  border-color: #126e12;
-}
-.btn-success:active,
-.btn-success.active,
-.open > .dropdown-toggle.btn-success {
-  color: white;
-  background-color: #188a18;
-  border-color: #126e12;
-}
-.btn-success:active:hover,
-.btn-success.active:hover,
-.open > .dropdown-toggle.btn-success:hover,
-.btn-success:active:focus,
-.btn-success.active:focus,
-.open > .dropdown-toggle.btn-success:focus,
-.btn-success:active.focus,
-.btn-success.active.focus,
-.open > .dropdown-toggle.btn-success.focus {
-  color: white;
-  background-color: #136c12;
-  border-color: #093609;
-}
-.btn-success:active,
-.btn-success.active,
-.open > .dropdown-toggle.btn-success {
-  background-image: none;
-}
-.btn-success.disabled:hover,
-.btn-success[disabled]:hover,
-fieldset[disabled] .btn-success:hover,
-.btn-success.disabled:focus,
-.btn-success[disabled]:focus,
-fieldset[disabled] .btn-success:focus,
-.btn-success.disabled.focus,
-.btn-success[disabled].focus,
-fieldset[disabled] .btn-success.focus {
-  background-color: #20b61f;
-  border-color: #1ba31b;
-}
-.btn-success .badge {
-  color: #20b61f;
-  background-color: white;
-}
-.btn-slideshow {
-  border: none;
-  background-color: transparent;
-  color: #20b61f;
-}
-.btn-slideshow.enabled {
-  color: red;
-  background-color: transparent;
-  border: none;
-}
 h1 {
   font-family: "Open Sans Condensed", sans-serif;
   font-size: 25px;
@@ -198,13 +120,17 @@ body {
   color: white;
 }
 .nav-background {
-  background: url('../../images/background-hd-3.jpg');
+  background: url('../../images/background.png');
   width: 100%;
   height: 35%;
 }
 .navbar-default {
   display: block;
   background-color: #fafafa;
+}
+.navbar-default .navbar-nav {
+  margin: 10px 0px;
+  border-top: 5px !important;
 }
 .navbar-default .navbar-nav > li > form > a {
   color: #fff;
@@ -236,19 +162,29 @@ body {
 .navbar-default .navbar-toggle .button-icon-bar {
   display: inline-block;
 }
+/*.border-right{
+    
+}
+.nav-firstChild{
+    
+}*/
 .navbar-brand {
   color: #fff !important;
   height: 40px;
-  padding: 5px 15px;
+  padding: 0px 0px;
+  margin-left: 5px;
 }
 .navbar-brand .logo {
   width: 61px;
   height: auto;
   background: url('../../images/logo cuadrado.png');
 }
-.navbar-nav > li:first-child .sep:after {
-  content: " | ";
-  padding: 0 10px;
+.navbar-nav {
+  font-family: myriadpro-regular;
+}
+.navbar-nav > li:first-child {
+  border-right: 1px solid white;
+  font-family: typogroteskrounded;
 }
 .navbar-nav > li > a {
   color: #fff !important;
@@ -296,6 +232,9 @@ body {
   margin-bottom: -5px;
   background: transparent url('images/login-button.png') top left no-repeat;
   background-size: 30px 23px;
+}
+.navbar-collapse {
+  margin-top: 5px;
 }
 .navbar-collapse.collapsing {
   background-color: white;
@@ -361,6 +300,7 @@ body {
   -moz-border-radius: 6px 0 6px 6px;
   border-radius: 6px 0 6px 6px;
 }
+/*@import "site/buttons.less";*/
 .progress.slideshow {
   margin: 1px 0 1px 0;
   background-color: transparent;
@@ -451,4 +391,9 @@ body {
   position: absolute;
   z-index: 9999;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+/*General shared*/
+.right-border {
+  border-right: 1px solid;
+  color: white;
 }
